# phase2-bn254

./: .dockerignore  .gitignore  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  Dockerfile  README.md  RECOMMENDATIONS.md  benchmark.sh  build.sh  e2e.sh  powers_of_tau_chunked.sh  powers_of_tau_full.sh
.cargo/: config
.circleci/: config.yml
.github/workflows/: build-and-release.yml  cli.yml  core.yml  wasm.yml
bellman/: Cargo.toml
bellman/src/: cs.rs  lib.rs
bellman/src/groth16/: mod.rs
bls-snark-setup/: Cargo.toml  README.md
bls-snark-setup/src/: main.rs
bls-snark-setup/src/cli/: contribute.rs  mod.rs  new.rs  verify.rs
examples/: mimc.rs
pairing/src/: lib.rs
pairing/src/bn256/: ec.rs  fr.rs
phase1/: Cargo.toml  README.md
phase1-cli/: Cargo.toml  README.md
phase1-cli/scripts/: phase1_chunked.sh  phase1_chunked_prepare_phase2.sh  phase1_full.sh
phase1-cli/src/: combine.rs  contribute.rs  lib.rs  new_challenge.rs  prepare_phase2.rs  split.rs  transform_pok_and_correctness.rs  transform_ratios.rs
phase1-wasm/: Cargo.toml  README.md
phase1-wasm/src/: lib.rs  phase1.rs  tests.rs
phase1/benches/: phase1.rs
phase1/src/: aggregation.rs  computation.rs  initialization.rs  key_generation.rs  lib.rs  serialization.rs  verification.rs
phase1/src/helpers/: accumulator.rs  buffers.rs  converters.rs  mod.rs  testing.rs
phase1/src/objects/: mod.rs  parameters.rs  private_key.rs  public_key.rs
phase1/tests/: marlin.rs
phase2/: .gitignore  Cargo.toml  README.md  circuit.circom  input.json  package.json  test.sh
phase2-cli/: Cargo.toml
phase2-cli/scripts/: phase2_chunked.sh
phase2-cli/src/: combine.rs  contribute.rs  lib.rs  new_challenge.rs  verify.rs
phase2/src/: chunked_groth16.rs  circom_circuit.rs  hash_writer.rs  keypair.rs  keypair_assembly.rs  lib.rs  load_circuit.rs  parameters.rs  polynomial.rs  utils.rs  verifier_groth.sol
phase2/src/helpers/: mod.rs  testing.rs
phase2/tests/: mpc.rs
phase2/tools/: copy_json.py  vk2ethsnarks.py
phase2/tools/patch_vk/: package-lock.json  package.json  patch_vk.js
powersoftau/: .gitignore  Cargo.toml  README.md  test.sh
powersoftau/benches/: accumulator.rs  io.rs  math.rs  powersoftau.rs  utils.rs
powersoftau/examples/: verify.rs
powersoftau/src/: accumulator.rs  batched_accumulator.rs  keypair.rs  lib.rs  main.rs  parameters.rs  utils.rs
powersoftau/src/bls12_381/: mod.rs
powersoftau/src/bn256/: mod.rs
powersoftau/src/cli_common/: beacon.rs  compute_constrained.rs  contribute.rs  mod.rs  new_challenge.rs  new_constrained.rs  transform.rs  verify.rs
powersoftau/src/raw/: chunk.rs  mod.rs  raw_accumulator.rs
powersoftau/src/small_bn256/: mod.rs
setup-utils/: Cargo.toml  README.md
setup-utils/benches/: io.rs  math.rs
setup-utils/src/: converters.rs  elements.rs  errors.rs  groth16_utils.rs  helpers.rs  lib.rs  rayon_cfg.rs  seed.rs
setup-utils/src/io/: mod.rs  read.rs  write.rs
snark-utils/: Cargo.toml  README.md
snark-utils/benches/: io.rs  math.rs
snark-utils/src/: elements.rs  errors.rs  groth16_utils.rs  helpers.rs  io.rs  lib.rs
snark-utils/src/io/: mod.rs  read.rs  write.rs
src/: accumulator.rs  batched_accumulator.rs  parameters.rs  utils.rs
src/bls12_381/: mod.rs
src/bn256/: mod.rs
src/small_bn256/: mod.rs
test-helpers/: Cargo.toml  README.md
test-helpers/src/: accumulator_helpers.rs  fixtures.rs  lib.rs
