[workspace]
members = [
    "./phase1",
    "./phase1-cli",
    "./phase1-wasm",
    "./phase2",
    "./setup-utils",
]

[patch.'https://github.com/scipr-lab/zexe']
zexe_algebra_core = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "algebra-core", default-features = false, features = ["derive"] }
zexe_algebra = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "algebra", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_fft = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "ff-fft", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_bench_utils = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "bench-utils", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_r1cs_core = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "r1cs-core", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_r1cs_std = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "r1cs-std", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_groth16 = { git = "https://github.com/celo-org/zexe", rev = "f3f9c27d683964e31383327a7418c9f8eb438841", package = "groth16", default-features = false, features = [] }
