[package]
name = "phase1-cli"
version = "0.3.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "Kobi Gurkan <kobigurk@gmail.com>", "The Aleo Team <hello@aleo.org>"]
description = "CLI implementation of Phase 1"
homepage = "https://github.com/celo-org/snark-setup"
repository = "https://github.com/celo-org/snark-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
phase1 = { path = "../phase1", default-features = false }
setup-utils = { path = "../setup-utils", default-features = false }

algebra = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "algebra", features = ["bls12_377", "bw6_761", "derive"] }

gumdrop = { version = "0.7.0" }
hex = { version = "0.4.2" }
memmap = { version = "0.7.0" }
rand = { version = "0.7" }
tracing = { version = "0.1.17" }
tracing-subscriber = { version = "0.2.3" }

[dev-dependencies]
rand_xorshift = { version = "0.2" }
wasm-bindgen-test = { version = "0.3.15" }

[build-dependencies]
rustc_version = { version = "0.2" }

[features]
default = ["cli", "bw6_asm" ]
cli = ["phase1/cli", "parallel", "setup-utils/cli"]
parallel = ["phase1/parallel", "setup-utils/parallel", "algebra/parallel"]
bw6_asm = [ "algebra/bw6_asm" ]

[[bin]]
name = "phase1"
required-features = ["cli"]

[[bin]]
name = "prepare_phase2"
required-features = ["cli"]
