[package]
name = "phase2-cli"
version = "0.3.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>"]
description = "CLI implementation of Phase 2"
homepage = "https://github.com/celo-org/snark-setup"
repository = "https://github.com/celo-org/snark-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
phase2 = { path = "../phase2", default-features = false }
setup-utils = { path = "../setup-utils", default-features = false }

algebra = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "algebra", features = ["bls12_377", "bw6_761", "derive"] }
r1cs_core = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "r1cs-core" }
groth16 = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "groth16", features = [] }
bench-utils = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "bench-utils", features = [] }

gumdrop = { version = "0.7.0" }
hex = { version = "0.4.2" }
memmap = { version = "0.7.0" }
rand = { version = "0.7" }
tracing = { version = "0.1.17" }
tracing-subscriber = { version = "0.2.3" }
phase1 = { path = "../phase1" }
#epoch-snark = { git = "https://github.com/celo-org/celo-bls-snark-rs", branch = "straka/integration_info" }
epoch-snark = { git = "https://github.com/celo-org/celo-bls-snark-rs", rev = "0995862883b7f88da5ef8e9102f4173a3f3bf20d" }

[dev-dependencies]
rand_xorshift = { version = "0.2" }
wasm-bindgen-test = { version = "0.3.15" }

[build-dependencies]
rustc_version = { version = "0.2" }

[features]
default = ["cli", "bw6_asm"]
cli = ["phase2/cli", "parallel", "setup-utils/cli", "phase1/cli"]
parallel = ["setup-utils/parallel", "algebra/parallel", "phase2/parallel", "phase1/parallel"]
bw6_asm = [ "algebra/bw6_asm" ]

[[bin]]
name = "phase2"
required-features = ["cli"]

