[package]
name = "phase2"
version = "0.3.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>", "Georgios Konstantopoulos <me@gakonst.com>", "Kobi Gurkan <kobigurk@gmail.com>", "The Aleo Team <hello@aleo.org>"]
description = "Library for performing MPCs for creating zk-SNARK public parameters"
homepage = "https://github.com/celo-org/snark-setup"
repository = "https://github.com/celo-org/snark-setup"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[[test]]
name = "mpc"
path = "tests/mpc.rs"
required-features = ["phase2/testing"]

[dependencies]
setup-utils = { path = "../setup-utils", default-features = false }

zexe_algebra = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "algebra", features = ["bls12_377", "bls12_381", "bw6_761"] }
zexe_groth16 = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "groth16", features = [] }
zexe_r1cs_core = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "r1cs-core" }

byteorder = { version = "1.3.4" }
cfg-if = { version = "0.1.10" }
crossbeam = { version = "0.7" }
itertools = { version = "0.9.0", optional = true }
num_cpus = { version = "1" }
rand = { version = "0.7.3" }
rayon = { version = "1.3.0", optional = true }
tracing = { version = "0.1.17" }
wasm-bindgen = { version = "0.2.67", features=["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

web-sys = { version = "0.3", features = ["console"], optional = true }

[dev-dependencies]
phase1 = { path = "../phase1", features = ["testing"] }
phase2 = { path = "./", features = ["testing"] }
wasm-bindgen-test = { version = "0.3.15" }

zexe_r1cs_std = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "r1cs-std" }

rusty-hook = { version = "0.11.2" }
tracing-subscriber = { version = "0.2.3" }

[features]
default = []
testing = ["parallel"]
parallel = ["rayon", "setup-utils/parallel", "zexe_algebra/parallel", "zexe_groth16/parallel"]

cli = ["setup-utils/cli"]
wasm = ["console_error_panic_hook", "itertools", "web-sys", "setup-utils/wasm"]
