[package]
name = "powersoftau"
version = "0.2.0"
authors = ["Sean Bowe", "Alex Vlasov"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "Communal zk-SNARK MPC for Public Parameters"
documentation = "https://docs.rs/powersoftau/"
homepage = "https://github.com/matter-labs/powersoftau"
repository = "https://github.com/matter-labs/powersoftau"

[dependencies]
snark-utils = { path = "../snark-utils", features = ["parallel"] }
zexe_algebra = { package = "algebra", version = "0.1.0", features = ["parallel"] }
rand = { version = "0.7" }
memmap = "0.7.0"
itertools = "0.8.0"
rayon = "1.3.0"

# used for the CLIs
gumdrop = "0.7.0"
hex-literal = "0.1.4"

[dev-dependencies]
criterion = "0.3"
zexe_algebra = { package = "algebra", version = "0.1.0", features = ["parallel", "full"] }
test-helpers = { path = "../test-helpers" }

# add this to compare performance with old accumulators
[dev-dependencies.powersoftau_v1]
package = "powersoftau"
git = "https://github.com/celo-org/snark-setup"
branch = "zexe-compat"

[[bench]]
name = "accumulator"
harness = false