[package]
name = "powersoftau"
version = "0.2.0"
authors = ["Sean Bowe", "Alex Vlasov"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "Communal zk-SNARK MPC for Public Parameters"
documentation = "https://docs.rs/powersoftau/"
homepage = "https://github.com/matter-labs/powersoftau"
repository = "https://github.com/matter-labs/powersoftau"

[dependencies]
rand = "0.4"
crossbeam = "0.7.3"
num_cpus = "1.7.0"
blake2 = "0.8.1"
# `blake2:0.8.1` uses `crypto-mac:0.7.0` which uses `generic-array:0.12.3` version. So we cannot update `generic-array` to the latest version.
generic-array = "0.12.3"
typenum = "1.12.0"
byteorder = "1.1.0"
hex-literal = "0.2.1"
rust-crypto = "0.2"
exitcode = "1.1.2"
hex = "0.4.0"

memmap = "0.7.0"
itertools = "0.9.0"

bellman_ce = { path = "../bellman" }
log = "0.4.8"
