[package]
name = "setup-utils"
version = "0.3.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "Kobi Gurkan <kobigurk@gmail.com>", "The Aleo Team <hello@aleo.org>"]
edition = "2018"

[[bench]]
name = "io"
harness = false
required-features = ["phase1"]

[[bench]]
name = "math"
harness = false

[dependencies]
algebra = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "algebra" }
fft = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "ff-fft", default-features = false }
r1cs_core = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "r1cs-core" }
groth16 = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "groth16", features = [] }

blake2 = { version = "0.8.1" }
blake2s_simd = { version = "0.5.10" }
cfg-if = { version = "0.1.10" }
crossbeam = { version = "0.7.3" }
num_cpus = { version = "1.12.0" }
rand = { version = "0.7.3" }
rand_chacha = { version = "0.2.1" }
rayon = { version = "1.3.0", optional = true }
thiserror = { version = "1.0.11" }
tracing = { version = "0.1.17" }
typenum = { version = "1.11.2" }
sha2 = "0.9"

[dev-dependencies]
phase1 = { path = "../phase1" }

algebra = { git = "https://github.com/scipr-lab/zexe", version = "0.1.1-alpha.0", package = "algebra", features = ["bls12_377", "bw6_761"] }

criterion = { version = "0.3.1" }
rusty-hook = { version = "0.11.2" }

[features]
default = ["parallel"]
cli = ["parallel"]
wasm = ["rand/wasm-bindgen"]

parallel = ["rayon", "algebra/parallel", "fft/parallel"]
