[package]
name = "snark-utils"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.11"
zexe_algebra = { package = "algebra", git = "https://github.com/scipr-lab/zexe", version = "0.1.0", features = ["parallel"] }
zexe_fft = { package = "ff-fft", git = "https://github.com/scipr-lab/zexe", version = "0.1.0", features = ["parallel"] }
rayon = { version = "1.3.0", optional = true }

# crypto lower-level crates
rand = "0.7.3"
rand_chacha = "0.2.1"
typenum = "1.11.2"
rust-crypto = "0.2"
crossbeam = "0.7.3"
num_cpus = "1.12.0"
blake2 = "0.8.1"
zexe_r1cs_core = { package = "r1cs-core", git = "https://github.com/scipr-lab/zexe", version = "0.1.0" }

[dev-dependencies]
criterion = "0.3.1"
test-helpers = { path = "../test-helpers" }
zexe_algebra = { package = "algebra", git = "https://github.com/scipr-lab/zexe", version = "0.1.0", features = ["parallel", "full"] }
powersoftau = { path = "../powersoftau" }

[[bench]]
name = "math"
harness = false
[[bench]]
name = "io"
harness = false

[features]
default = []
parallel = ["rayon", "zexe_algebra/parallel", "zexe_fft/parallel"]