[package]
name = "test-helpers"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]
powersoftau = { path = "../powersoftau" }
snark-utils = { path = "../snark-utils" }
zexe_algebra = { package = "algebra", version = "0.1.0", features = ["parallel"] }

rand = "0.7.3"
typenum = "1.11.2"
rust-crypto = "0.2"